# Sefi

./: .env.example  .gitignore  Dockerfile  README.md  SEFI_PHASE2_COMPUTEKIT_AGENT_BUILD_SPEC.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sefi_indexing_agent_sdk_part1_AGENT_BUILD_SPEC.md  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  phase3-testnet.yml
apps/api/: package.json
apps/api/src/: api.test.ts  index.ts
apps/demo-agent/: package.json
apps/demo-agent/src/: index.ts
apps/proof-worker/: package.json
apps/proof-worker/src/: index.ts
apps/worker/: package.json
apps/worker/src/: index.ts
circuits/: .gitignore
circuits/aquarius_route_policy/: Nargo.toml
circuits/aquarius_route_policy/src/: main.nr
circuits/blend_utilization_policy/: Nargo.toml
circuits/blend_utilization_policy/src/: main.nr
circuits/circom/: .gitignore  aquarius_route.circom  blend_utilization.circom  composite_borrow_exit.circom  sdex_exit.circom  sefi_merkle.circom
circuits/composite_borrow_exit_policy/: Nargo.toml
circuits/composite_borrow_exit_policy/src/: main.nr
circuits/sdex_exit_policy/: Nargo.toml
circuits/sdex_exit_policy/src/: main.nr
circuits/shared/: Nargo.toml
circuits/shared/src/: lib.nr
contracts/: .gitignore  README.md
contracts/noir_ultrahonk_verifier/: Cargo.toml
contracts/noir_ultrahonk_verifier/examples/: gen_vector.rs
contracts/noir_ultrahonk_verifier/src/: groth16_test.rs  lib.rs  test.rs
contracts/sefi_verifier_registry/: Cargo.toml
contracts/sefi_verifier_registry/src/: lib.rs  test.rs
contracts/sefi_verifier_registry/test_snapshots/test/: register_get_and_card_roundtrip.1.json
contracts/verifier-registry/: Cargo.toml
contracts/verifier-registry/src/: lib.rs
deployments/: phase3-testnet.json
docs/: PHASE2_FIX_REPORT.md  PHASE3_MULTI_PROTOCOL_PROOF_COVERAGE.md  architecture.md  computekit.md  phase2-audit-fix-log.md  proof-of-data-handoff.md  proofs.md  sdk.md  testing.md  zk-bn254.md
docs/adapters/: aquarius.md  blend.md  sdex.md
scripts/: circom-setup.sh  contracts-build.sh  demo-phase2.ts  deploy-phase3-verifiers-testnet.ts  deploy-verifier-registry.ts  deploy-verifier-testnet.sh  emit-proof-card.ts  ingest-aquarius.ts  ingest-blend.ts  ingest-sdex.ts  noir-build.ts  phase3-testnet-e2e.ts  prove-aquarius-groth16.ts  prove-aquarius-live-groth16.ts  prove-blend-bn254.ts  prove-blend-groth16.ts  prove-blend-live-groth16.ts  prove-blend-utilization.ts  prove-composite-bn254.ts  prove-composite-borrow-exit.ts  prove-composite-groth16.ts  prove-composite-live-groth16.ts  prove-sdex-groth16.ts  prove-sdex-live-groth16.ts  prove-verify-compute-testnet.ts  replay.ts  smoke-test.ts  verify-groth16-testnet.ts  verify-proof-bn254.ts  verify-proof-testnet.ts  verify-proof.ts  zk-localnet.ts  zk-test.ts
(+5 files in other folders)
